name:                lab5
version:             0.1.0.0
license-file:        LICENSE
author:              Stijn Hinlopen; Lawko van der Weiden
maintainer:          5727278@students.uu.nl
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable lab5
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5,
                       gloss,
                       random
  hs-source-dirs:      src
  default-language:    Haskell2010